# w3rkstatt

./: CONTRIBUTING.md  README.md  README.rst  SECURITY.md  SETUP.md  demo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: CTM.md  DISCO.md  ITSM.md  SECURITY.md  SETUP.md  SHELL.md  SMTP.md  TSIM.md  TSO.md  conf.py  index.rst
release/: bridge_ctm.py  bridge_helix.py  core_bhom.py  core_ctm.py  core_itsm.py  core_smtp.py  core_tsim.py  core_tso.py  ctm_alerts.bat  ctm_alerts.py  ctm_alerts.sh  uat.py  w3rkstatt.py
release/config/: helix_itsm_mappings.json  setup.settings.ini
release/swagger/: bridge.ctm.api.getChangeStatus.yml  bridge.ctm.api.json  bridge.ctm.api.validateChangeState.yml
release/templates/: bmcs.html  integrations.json
src/: __init__.py  bridge_ctm.py  bridge_helix.py  bridge_snow.py  bridge_tso.py  bridge_wcm.py  core_bhom.py  core_ctm.py  core_itsm.py  core_smtp.py  core_snow.py  core_tsim.py  core_tso.py  ctm_alerts.py  ctm_alerts.sh  ctm_beat.py  disco_ctm.py  package.sh  setup.ctm.wcm.bridge.sh  test.sh  uat.py  w3rkstatt.py
src/logs/: package.sh.txt
src/samples/: README.md  integrations.json
src/shell/: remove_ctm_env.sh
src/static/: Thumbs.db
src/swagger/: bridge.ctm.api.stateChanged.yml
src/templates/: index.html  integrations.json
thunder-tests/: ab.json  thunderCollection.json  thunderEnvironment.json  thunderclient.json
w3rkstatt/: __init__.py  ctm.py  itsm.py  smtp.py  w3rkstatt.py
w3rkstatt/samples/: email.html  integrations.json  itsm_incident.json
(+2 files in other folders)
